# streamings

./: Cargo.toml
src/: definitions.rs  executors.rs  main.rs  relations.rs  sql.rs  values.rs
src/executors/: kinesis.rs  mod.rs
src/planners/: mod.rs
