[package]
name = "streamings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
futures-util = "0.3.25"
nom = "7.1.1"
rusoto_core = "0.48.0"
rusoto_kinesis = "0.48.0"
serde_json = "1.0.89"
tokio = "1.22.0"
