[package]
name = "streamings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.7"
futures-util = "0.3.27"
nom = "7.1.3"
rusoto_core = "0.48.0"
rusoto_kinesis = "0.48.0"
serde_json = "1.0.94"
tokio = "1.26.0"
