[package]
name = "streamings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
futures-util = "0.3.28"
nom = "7.1.3"
nom-recursive = "0.5.0"
nom_locate = "4.1.0"
rusoto_core = "0.48.0"
rusoto_kinesis = "0.48.0"
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["sync"] }
tokio-scoped = "0.2.0"
